--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lara",
+  "name": "by.jesko",
   "version": "1.0.0",
-  "description": "Lara-MD WhatsApp bot created Sadeesha With using Node.js",
+  "description": "by.jesko-MD WhatsApp bot created Sadeesha With using Node.js",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name lara",
